--- a/emileygz_OriginalHomeworkCode_03.Rmd
+++ b/emileygz_OriginalHomeworkCode_03.Rmd
@@ -8,4 +8,100 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+```{r}
+install.packages('curl')
+install.packages('ggplot2')
+install.packages('manipulate')
+```
+
+
+```{r}
+library(curl)
+z <- curl("https://raw.githubusercontent.com/fuzzyatelin/fuzzyatelin.github.io/master/AN588_Fall23/zombies.csv")
+read.csv(z)
+```
+```{r}
+```
+
+
+1. Calculate the population mean and standard deviation for each quantitative random variable (height, weight, age, number of zombies killed, and years of education). NOTE: You will not want to use the built in var() and sd() commands as these are for samples.
+
+```{r}
+
+##calculating height mean
+zombies = read.csv('https://raw.githubusercontent.com/fuzzyatelin/fuzzyatelin.github.io/master/AN588_Fall23/zombies.csv')
+height_mean <- mean(zombies$height)
+height_mean
+
+## standard deviation
+sd.p=function(x){sd(x)*sqrt((length(x)-1)/length(x))}
+sd.p(zombies$height)
+
+##calculating weight mean
+weight_mean <- mean(zombies$weight)
+weight_mean
+sd.p(zombies$weight)
+
+## calculating age mean
+age_mean <- mean(zombies$age)
+age_mean
+sd.p(zombies$age)
+
+## calculating mean of number of zombies killed
+numkilled_mean <- mean(zombies$zombies_killed)
+numkilled_mean
+sd.p(zombies$zombies_killed)
+
+##calculating mean of years of education
+yearsofedu_mean <- mean(zombies$years_of_education)
+yearsofedu_mean
+sd.p(zombies$years_of_education)
+```
+
+2. Use {ggplot} to make boxplots of each of these variables by gender.
+
+```{r}
+library(ggplot2)
+class(zombies)
+ggplot(zombies, aes(x=gender, y = height, fill = gender)) + geom_boxplot() + stat_summary(fun = "mean", geom = "point", shape = 8, size = 2, color = "white")
+
+```
+```{r}
+ggplot(zombies, aes(x=gender, y = weight, fill = gender)) + geom_boxplot() + stat_summary(fun = "mean", geom = "point", shape = 8, size = 2, color = "white")
+```
+```{r}
+ggplot(zombies, aes(x=gender, y = age, fill = gender)) + geom_boxplot() + stat_summary(fun = "mean", geom = "point", shape = 8, size = 2, color = "white")
+```
+```{r}
+ggplot(zombies, aes(x=gender, y = zombies_killed, fill = gender)) + geom_boxplot() + stat_summary(fun = "mean", geom = "point", shape = 8, size = 2, color = "white")
+```
+```{r}
+ggplot(zombies, aes(x=gender, y = years_of_education, fill = gender)) + geom_boxplot() + stat_summary(fun = "mean", geom = "point", shape = 8, size = 2, color = "white")
+```
+
+
+3. Use {ggplot} to make scatterplots of height and weight in relation to age. Do these variables seem to be related? In what way?
+```{r}
+
+ggplot(zombies, aes(x=age, y = height)) + geom_point(color = 'blue')
+
+ggplot(zombies, aes(x=age, y = weight)) + geom_point(color = 'red')
+```
+
+4. Using histograms and Q-Q plots, check whether the quantitative variables seem to be drawn from a normal distribution. Which seem to be and which do not (hint: not all are drawn from the normal distribution)? For those that are not normal, can you determine from which common distribution they are drawn?
+
+
+
+
+
+5. Now use the sample() function to sample ONE subset of 30 zombie survivors (without replacement) from this population and calculate the mean and sample standard deviation for each variable. Also estimate the standard error for each variable, and construct the 95% confidence interval for each mean. Note that for the variables that are not drawn from the normal distribution, you may need to base your estimate of the CIs on slightly different code than for the normal…
+
+
+
+
+
+
+6. Now draw 99 more random samples of 30 zombie apocalypse survivors, and calculate the mean for each variable for each of these samples. Together with the first sample you drew, you now have a set of 100 means for each variable (each based on 30 observations), which constitutes a sampling distribution for each variable. What are the means and standard deviations of this distribution of means for each variable? How do the standard deviations of means compare to the standard errors estimated in [5]? What do these sampling distributions look like (a graph might help here)? Are they normally distributed? What about for those variables that you concluded were not originally drawn from a normal distribution?
+
+
 
